# algorand-falcon-keys

./: Cargo.toml  README.md  build.rs
src/: constants.rs  error.rs  ffi.rs  keygen.rs  lib.rs  signature.rs  zeroize.rs
src/mnemonic/: mod.rs  words.rs
