[package]
name = "algorand-falcon-keys"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
hkdf = { version = "0.13", optional = true }
pbkdf2 = { version = "0.12", optional = true }
sha2 = { version = "0.11", optional = true }
unicode-normalization = { version = "0.1", optional = true }

[features]
mnemonic = ["dep:sha2", "dep:pbkdf2", "dep:hkdf", "dep:unicode-normalization"]

[build-dependencies]
cc = "1.0"




